<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gpacalculatorpackage.MainFragment"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/select_an_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_an_option"
        android:textSize="30sp"
        android:paddingLeft="13dp"
        android:paddingTop="10dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingTop="7dp"
        android:layout_below="@id/select_an_option">

        <RadioButton
            android:id="@+id/currentGPA_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_currentGPA"
            android:textSize="22sp"
            android:paddingLeft="1dp"/>



        <RadioButton
            android:id="@+id/goalGPA_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpa_by_goal"
            android:textSize="22sp"
            android:paddingLeft="1dp"/>

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous"
            android:background="@drawable/navigation_button_selector"
            android:textColor="#6C6C70"/>


        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:background="@drawable/navigation_button_selector"/>

    </LinearLayout>

</RelativeLayout>
