<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gpacalculatorpackage.SemesterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/navigation_layout"
            android:layout_alignParentTop="true"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/semester_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="Semester"
                android:textSize="21sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/headings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/semester_title"
                android:paddingTop="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="12"
                    android:gravity="center"
                    android:text="@string/courses"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:gravity="left"

                    android:text="@string/credits"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:gravity="left"
                    android:paddingRight="1dp"
                    android:text="@string/grade"
                    android:textSize="19sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/invis_view"
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/root"
                android:layout_below="@id/headings"
                android:orientation="vertical"/>

            <RelativeLayout
                android:id="@+id/text_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/root"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/semester_credits_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="@string/semester_credits_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/semester_credits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/semester_credits_text"
                    android:paddingLeft="18dp"
                    android:text="0.0"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/semester_gpa_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/semester_credits_text"
                    android:layout_below="@id/semester_credits_text"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="2dp"
                    android:text="@string/semester_gpa_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/semester_gpa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/semester_credits_text"
                    android:layout_toRightOf="@id/semester_gpa_text"
                    android:paddingLeft="37dp"
                    android:text="0.0"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cumulative_credits_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/semester_gpa_text"
                    android:layout_below="@id/semester_gpa_text"
                    android:paddingTop="2dp"
                    android:text="@string/cumulative_credits_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/cumulative_credits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/semester_gpa_text"
                    android:layout_toRightOf="@id/cumulative_credits_text"
                    android:paddingLeft="5dp"
                    android:text="0"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cumulative_gpa_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/cumulative_credits_text"
                    android:layout_below="@id/cumulative_credits_text"
                    android:paddingTop="2dp"
                    android:text="@string/cumulative_gpa_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/cumulative_gpa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cumulative_credits_text"
                    android:layout_toRightOf="@id/cumulative_gpa_text"
                    android:paddingLeft="25dp"
                    android:text="0.0"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/gpa_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_views"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:text="(Scale: A- = 4.0)"
                android:paddingBottom="20dp"
                android:textColor="#ffa0a0a0"/>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@id/navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/navigation_button_selector"
            android:text="@string/previous"
            android:textColor="#ffffff" />


        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/navigation_button_selector"
            android:text="@string/next"
            android:textColor="#6C6C70" />

    </LinearLayout>

</RelativeLayout>
