<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_above="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:paddingTop="1dp"
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/cumulative_layout"/>

        <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:paddingTop="4dp"
            android:text="Click the + icon to add a new semester!"
            android:textSize="20sp"
            android:textColor="@color/grayed_out"/>

        <RelativeLayout
            android:id="@id/cumulative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:paddingTop="2dp"
            android:background="@color/cumulative_background"
            android:paddingBottom="7dp">

            <TextView
                android:id="@+id/cumulative_credits_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/semester_gpa_text"
                android:layout_below="@id/semester_gpa_text"
                android:paddingTop="2dp"
                android:text="@string/cumulative_credits_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/cumulative_credits_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/semester_gpa_text"
                android:layout_toRightOf="@id/cumulative_credits_text"
                android:paddingLeft="5dp"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cumulative_gpa_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/cumulative_credits_text"
                android:layout_below="@id/cumulative_credits_text"
                android:paddingTop="2dp"
                android:text="@string/cumulative_gpa_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/cumulative_gpa_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cumulative_credits_text"
                android:layout_toRightOf="@id/cumulative_gpa_text"
                android:paddingLeft="25dp"
                android:text="0.0"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/navigation_button_selector"
            android:text="@string/previous"
            android:textColor="#ffffff" />


        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/navigation_button_selector"
            android:text="@string/next"
            android:textColor="#ffffff"/>

    </LinearLayout>

</RelativeLayout>